--- a/deployment/media-analysis-deploy.yaml
+++ b/deployment/media-analysis-deploy.yaml
@@ -45,7 +45,7 @@ Resources:
         DeletionPolicy: Retain
         DependsOn: MediaAnalysisNewMediaPermission
         Properties:
-            BucketName: !Join ["", ["media-analysis-", Ref: "AWS::Region", "-", Ref: "AWS::AccountId"]]
+            BucketName: !Sub 'media-analysis-${AWS::Region}-${AWS::AccountId}'
             BucketEncryption:
                 ServerSideEncryptionConfiguration:
                     -
@@ -468,7 +468,7 @@ Resources:
             FunctionName: !GetAtt MediaAnalysisFunction.Arn
             Principal: s3.amazonaws.com
             SourceAccount: !Ref AWS::AccountId
-            SourceArn: !Join ["", ["arn:aws:s3:::", "media-analysis-", Ref: "AWS::Region", "-", Ref: "AWS::AccountId"]]
+            SourceArn: !Sub 'arn:aws:s3:::media-analysis-${AWS::Region}-${AWS::AccountId}'
 
     MediaAnalysisCongitoAuthenticatedRole:
       Type: "AWS::IAM::Role"
